<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andres_desarrollo2.psfull.RecuperarCuentaActivity">

    <TextView
        android:id="@+id/txtVwMsgRecuperCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_recuperar_cuenta"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:fontFamily="@string/abc_searchview_description_query" />


    <TextView
        android:id="@+id/txtVwRecuperCuentaVacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@id/txtVwMsgRecuperCuenta"/>

    <EditText
        android:id="@+id/txtVwRecuperCuentaUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/txtVwRecuperCuentaVacio"/>


    <EditText
        android:id="@+id/txtVwRecuperCuentaEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edEmail"
        android:layout_below="@id/txtVwRecuperCuentaUser"/>

    <LinearLayout
        android:id="@+id/btnLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/txtVwRecuperCuentaEmail">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnCancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnEnviar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
</RelativeLayout>
