<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgraund_login"
    tools:context="com.example.andres_desarrollo2.psfull.LoginActivity">


    <TextView
        android:id="@+id/txtVwTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="90dp"/>

    <LinearLayout
        android:id="@+id/linerUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtVwTop">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="Email"/>

        <EditText
            android:id="@+id/edtUser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/edEmail"
            android:inputType="text"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linerPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/linerUser">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="Contraseña"/>

        <EditText
            android:id="@+id/edtPassw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/edPassw"
            android:inputType="textPassword"/>

    </LinearLayout>


    <CheckBox
        android:id="@+id/chkShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/cbShowPass"
        android:layout_below="@id/linerPass"
        android:layout_alignRight="@id/linerPass"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"/>


    <LinearLayout
        android:id="@+id/btnLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/chkShow">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnExit"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnLogin"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtVwRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRegistro"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/btnLinear"/>

    <TextView
        android:id="@+id/txtVwLoginRecuperarCuenta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRecuperarCuenta"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_below="@id/txtVwRegistro"/>

</RelativeLayout>

