<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrarCuentaActivity">

    <TextView
        android:id="@+id/txtVwDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registre sus datos aqui, para crear una nueva cuenta...!"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:fontFamily="@string/abc_searchview_description_query"/>


    <LinearLayout
        android:id="@+id/linerEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/txtVwDesc">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/edEmail"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/linerEmail">

        <EditText
            android:id="@+id/edtUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/edUser"
            android:inputType="text"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linerPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/linerUser"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/edtPassw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/edPassw"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linerPass">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnCancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/btnRegis"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnRegistrar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

</RelativeLayout>
