<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andres_desarrollo2.psfull.SplashActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/splash"
            android:contentDescription="@string/splash" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_version"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/bprogreso"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>